--- a/app/src/main/res/layout/activity_q38_to_q44_screen.xml
+++ b/app/src/main/res/layout/activity_q38_to_q44_screen.xml
@@ -114,8 +114,9 @@
                     android:text="@string/_38"
                     android:id="@+id/textView1"
                     android:layout_column="1"
-                    android:layout_weight="1"
+                    android:layout_weight="0"
                     android:textAlignment="center" android:textSize="18sp"/>
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -125,6 +126,14 @@
                     android:layout_column="2"
                     android:layout_weight="2"
                     android:textSize="18sp" android:maxWidth="300dp"/>
+
+                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:id="@+id/Q38radiogroup"
+                    android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
+                    android:orientation="horizontal"
+                    android:layout_weight="3">
+
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -149,7 +158,7 @@
                     android:layout_weight="1"
                     android:textAlignment="center"
                     android:width="25dp" android:layout_gravity="center_horizontal"/>
-
+                </RadioGroup>
             </TableRow>
 
             <!-- Question 39 -->
@@ -162,7 +171,7 @@
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:text="@string/_39"
                     android:layout_column="1"
-                    android:layout_weight="1"
+                    android:layout_weight="0"
                     android:textAlignment="center" android:textSize="18sp"/>
                 <TextView
                     android:layout_width="wrap_content"
@@ -179,6 +188,14 @@
                     android:layout_column="3"
                     android:layout_weight="1"
                     android:width="40dp" android:layout_gravity="center_horizontal" android:textAlignment="center"/>
+
+                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:id="@+id/Q39radiogroup"
+                    android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
+                    android:orientation="horizontal"
+                    android:layout_weight="3">
+
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -193,6 +210,7 @@
                     android:layout_column="5"
                     android:layout_weight="1"
                     android:width="25dp" android:layout_gravity="center_horizontal" android:textAlignment="center"/>
+                </RadioGroup>
             </TableRow>
 
             <!-- Question 40 -->
@@ -206,7 +224,7 @@
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:text="@string/_40"
                     android:layout_column="1"
-                    android:layout_weight="1"
+                    android:layout_weight="0"
                     android:textAlignment="center" android:textSize="18sp"/>
                 <TextView
                     android:layout_width="wrap_content"
@@ -216,6 +234,14 @@
                     android:layout_column="2"
                     android:textSize="18sp"
                     android:layout_weight="2" android:maxWidth="300dp"/>
+
+                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:id="@+id/Q40radiogroup"
+                    android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
+                    android:orientation="horizontal"
+                    android:layout_weight="3">
+
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -237,6 +263,7 @@
                     android:layout_column="5"
                     android:layout_weight="1"
                     android:width="25dp" android:layout_gravity="center_horizontal" android:textAlignment="center"/>
+                </RadioGroup>
             </TableRow>
 
             <!-- Question 41 -->
@@ -250,7 +277,7 @@
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:text="@string/_41"
                     android:layout_column="1"
-                    android:layout_weight="1"
+                    android:layout_weight="0"
                     android:textAlignment="center" android:textSize="18sp"/>
                 <TextView
                     android:layout_width="wrap_content"
@@ -260,6 +287,14 @@
                     android:layout_column="2"
                     android:textSize="18sp"
                     android:layout_weight="2" android:maxWidth="300dp"/>
+
+                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:id="@+id/Q41radiogroup"
+                    android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
+                    android:orientation="horizontal"
+                    android:layout_weight="3">
+
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -281,6 +316,7 @@
                     android:layout_column="5"
                     android:layout_weight="1"
                     android:width="25dp" android:layout_gravity="center_horizontal" android:textAlignment="center"/>
+                </RadioGroup>
             </TableRow>
             <!-- Question 42 -->
             <TableRow
@@ -292,7 +328,7 @@
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:text="@string/_42"
                     android:layout_column="1"
-                    android:layout_weight="1"
+                    android:layout_weight="0"
                     android:textAlignment="center" android:textSize="18sp"/>
                 <TextView
                     android:layout_width="wrap_content"
@@ -302,6 +338,14 @@
                     android:layout_column="2"
                     android:textSize="18sp"
                     android:layout_weight="2" android:maxWidth="300dp"/>
+
+                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:id="@+id/Q42radiogroup"
+                    android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
+                    android:orientation="horizontal"
+                    android:layout_weight="3">
+
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -323,6 +367,7 @@
                     android:layout_column="5"
                     android:layout_weight="1"
                     android:width="25dp" android:layout_gravity="center_horizontal" android:textAlignment="center"/>
+                </RadioGroup>
             </TableRow>
 
             <!-- Question 43 -->
@@ -336,7 +381,7 @@
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:text="@string/_43"
                     android:layout_column="1"
-                    android:layout_weight="1"
+                    android:layout_weight="0"
                     android:textAlignment="center" android:textSize="18sp"/>
                 <TextView
                     android:layout_width="wrap_content"
@@ -346,6 +391,14 @@
                     android:layout_column="2"
                     android:textSize="18sp"
                     android:layout_weight="2" android:maxWidth="300dp"/>
+
+                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:id="@+id/Q43radiogroup"
+                    android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
+                    android:orientation="horizontal"
+                    android:layout_weight="3">
+
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -367,6 +420,7 @@
                     android:layout_column="5"
                     android:layout_weight="1"
                     android:width="25dp" android:layout_gravity="center_horizontal" android:textAlignment="center"/>
+                </RadioGroup>
             </TableRow>
 
             <!-- Question 44 -->
@@ -380,7 +434,7 @@
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:text="@string/_44"
                     android:layout_column="1"
-                    android:layout_weight="1"
+                    android:layout_weight="0"
                     android:textAlignment="center" android:textSize="18sp"/>
                 <TextView
                     android:layout_width="wrap_content"
@@ -390,6 +444,14 @@
                     android:layout_column="2"
                     android:textSize="18sp"
                     android:layout_weight="2" android:maxWidth="300dp"/>
+
+                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:id="@+id/Q44radiogroup"
+                    android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
+                    android:orientation="horizontal"
+                    android:layout_weight="3">
+
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -411,6 +473,7 @@
                     android:layout_column="5"
                     android:layout_weight="1"
                     android:width="25dp" android:layout_gravity="center_horizontal" android:textAlignment="center"/>
+                </RadioGroup>
             </TableRow>
         </TableLayout>
     </ScrollView>
